--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "./index.ts",
   "scripts": {
     "dev": "nodemon",
+    "build": "node_modules/.bin/rimraf ./build && tsc",
+    "start": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
