all checks made

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-API_URL=http://localhost:8000/api
-TWITTER_URL=https://twitter.com/$TWITTER_USER
+NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NEXT_PUBLIC_COHERE_API_KEY=9bOPOZV4AMZmAr45Uf7wKpk9WzQiVukYlUwL4PbD
