--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "./index.ts",
   "scripts": {
     "dev": "nodemon",
-    "build": "node_modules/.bin/rimraf ./build && tsc",
+    "build": "tsc",
     "start": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
